<resources>
    <string name="ip_address">10.100.18.125</string>
    <string name="database">testDB</string>
    <string name="required_jdbc">net.sourceforge.jtds.jdbc.Driver</string>

    <string name="app_name">Coil Inv.</string>
    <string name="welcome">Inventory Management</string>
    <string name="manual">Manual Input</string>
    <string name="submit">Submit</string>
    <string name="auto">Automatic</string>
    <string name="signOut">Sign Out</string>
    <string name="user">User Name:</string>
    <string name="pass">Password:</string>
    <string name="choose_database">Activity:</string>
    <string name="login">Sign In</string>
    <string name="download">Download Database</string>
    <string name="upload">Upload Changes</string>
    <string name="view">View Inventory</string>
    <string name="add">Update Bin</string>
    <string name="view_schedule">View Schedule</string>
    <string name="wrap_quantity">Bin\'s New Qty:</string>
    <string name="wrap_shelf">Bin Location:</string>
    <string name="wrap_serial">Work Order #:</string>
    <string name="view_locations">View Loc. by WO</string>
    <string name="winding_spinner_prompt">Choose Activity</string>
    <!--<string name="location_column_2">quantity</string>
    <string name="location_column_1">location</string>-->

    <string-array name="spinner_items">
        <item>Inventory</item>
        <item>Quality</item>
        <item>Wrapping</item>
        <item>Line</item>
    </string-array>
    <string-array name="coiling_activities">
        <item>Add Units</item>
        <item>Remove Units</item>
        <item>Adjust Units</item>
        <item>Change Activity</item>
    </string-array>
    <string name="title_activity_location">Location Activity</string>
    <string name="location_title">Locations</string>
    <string name="location_hint">Work Order Number</string>
    <string name="quantity_title">QTY</string>
    <string name="empty">Empty</string>
    <string name="partial">Partial/Full</string>
    <string name="empty_question">New Bin Status:</string>
    <string name="schedule_title">Schedule</string>
    <string name="shift_1">1st Shift</string>
    <string name="shift_2">2nd Shift</string>
    <string name="shift_3">3rd Shift</string>
    <string name="pad">Pads</string>
    <string name="pole">Poles</string>
    <string name="schedule_hint">Production Run</string>
    <string name="order_title">SEQ</string>
    <string name="work_order_title">WO #</string>
    <string name="stock_title">In Stock</string>
    <string name="view_empty_locations">See Empty Locations</string>
    <string name="empty_location_title">Empty Locations</string>
    <string name="view_all_items">See all Items</string>

</resources>
