<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <RadioGroup
        android:id="@+id/radio_shift_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/radio_shift_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shift_1"/>
        <RadioButton
            android:id="@+id/radio_shift_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shift_2"/>
        <RadioButton
            android:id="@+id/radio_shift_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shift_3"/>
    </RadioGroup>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/schedule_title"
            android:textSize="25sp"
            />

        <EditText
            android:id="@+id/wo_input"
            android:paddingTop="7dp"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:imeOptions="actionSend"
            android:gravity="center"
            android:hint="@string/schedule_hint"/>
    </LinearLayout>

    <RadioGroup
        android:id="@+id/radio_pad_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/radio_pad_pad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pad"/>
        <RadioButton
            android:id="@+id/radio_pole_pole"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pole"/>
    </RadioGroup>
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".15"
            android:paddingLeft="10dp"
            android:text="@string/order_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".30"
            android:paddingLeft="10dp"
            android:text="@string/work_order_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".15"
            android:paddingLeft="10dp"
            android:text="@string/quantity_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".20"
            android:paddingLeft="10dp"
            android:text="@string/stock_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#000"/>

    <ListView
        android:id="@+id/schedule_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </ListView>

</LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="1dp"
        android:visibility="gone"/>
</FrameLayout>