<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="110px"
        android:gravity="top"
        >

        <TextView
            android:id="@+id/top_user"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".35"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:paddingLeft="2dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/top_db"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".35"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/sign_out"
            android:layout_width="0dp"
            android:layout_weight=".30"
            android:layout_height="match_parent"
            android:text="@string/signOut" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:layout_gravity="center"
            android:textSize="48px" />

        <EditText
            android:id="@+id/serial_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:width="400px" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/manual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:textOff="@string/manual"
                android:textOn="@string/auto" />

            <Button
                android:id="@+id/submit_serial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="110px"
        android:layout_marginTop="900px"
        android:gravity="bottom"
        >
        <Button
            android:id="@+id/bottom_download"
            android:layout_width="0dp"
            android:layout_weight=".33"
            android:layout_height="match_parent"
            android:text="@string/download" />
        <Button
            android:id="@+id/bottom_view"
            android:layout_width="0dp"
            android:layout_weight=".34"
            android:layout_height="match_parent"
            android:text="@string/view" />
        <Button
            android:id="@+id/bottom_upload"
            android:layout_width="0dp"
            android:layout_weight=".33"
            android:layout_height="match_parent"
            android:text="@string/upload" />
    </LinearLayout>
</RelativeLayout>