<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/location_title"
        android:textSize="25sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".40"
            android:text="@string/work_order_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".40"
            android:text="@string/location_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".20"
            android:text="@string/quantity_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#000"/>

    <ListView
        android:id="@+id/full_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </ListView>

</LinearLayout>
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:elevation="1dp"
        android:layout_gravity="center"
        android:visibility="gone"/>
</FrameLayout>